// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>>MobileCompany renders company correctly 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyChangeTitle"
  >
    <div>
      <input
        onClick={[Function]}
        type="button"
        value="МТС"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Velcom"
      />
    </div>
    <div
      className="NameMobileCompanyFilter"
    >
      <label
        htmlFor="filter"
      >
        Show
      </label>
      <select
        id="filter"
        onChange={[Function]}
      >
        <option
          value="all"
        >
          All
        </option>
        <option
          value="active"
        >
          Active
        </option>
        <option
          value="blocked"
        >
          Blocked
        </option>
      </select>
    </div>
  </div>
  <div
    className="MobileCompanyName"
  >
    Компания «
    Velcom
    »
  </div>
  <div
    className="MobileCompanyClients"
  >
    <div
      className="MobileClient"
    >
      <span
        className="MobileClientId"
      >
        101
      </span>
      <div
        className="MobileClientFio"
      >
        <div
          className="MobileClientFioContainer"
        >
          <span>
            Иванов Иван Иванович
          </span>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </div>
      </div>
      <div
        className="MobileClientBalance"
      >
        <button
          className="MobileClientDecreaseBalance"
          onClick={[Function]}
        >
          -
        </button>
        <span>
          2
        </span>
        <button
          className="MobileClientIncreaseBalance"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div
        className="MobileClientStatus"
      >
        <span
          className="MobileClientStatusActive"
        >
          Active
        </span>
      </div>
      <div
        className="MobileClientActions"
      >
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
    </div>
    <div
      className="MobileClient"
    >
      <span
        className="MobileClientId"
      >
        105
      </span>
      <div
        className="MobileClientFio"
      >
        <div
          className="MobileClientFioContainer"
        >
          <span>
            Сидоров Сидор Сидорович
          </span>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </div>
      </div>
      <div
        className="MobileClientBalance"
      >
        <button
          className="MobileClientDecreaseBalance"
          onClick={[Function]}
        >
          -
        </button>
        <span>
          3
        </span>
        <button
          className="MobileClientIncreaseBalance"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div
        className="MobileClientStatus"
      >
        <span
          className="MobileClientStatusActive"
        >
          Active
        </span>
      </div>
      <div
        className="MobileClientActions"
      >
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
    </div>
    <div
      className="MobileClient"
    >
      <span
        className="MobileClientId"
      >
        110
      </span>
      <div
        className="MobileClientFio"
      >
        <div
          className="MobileClientFioContainer"
        >
          <span>
            Петров Пётр Петрович
          </span>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </div>
      </div>
      <div
        className="MobileClientBalance"
      >
        <button
          className="MobileClientDecreaseBalance"
          onClick={[Function]}
        >
          -
        </button>
        <span>
          -1
        </span>
        <button
          className="MobileClientIncreaseBalance"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div
        className="MobileClientStatus"
      >
        <span
          className="MobileClientStatusBlocked"
        >
          Blocked
        </span>
      </div>
      <div
        className="MobileClientActions"
      >
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
    </div>
    <div
      className="MobileClient"
    >
      <span
        className="MobileClientId"
      >
        120
      </span>
      <div
        className="MobileClientFio"
      >
        <div
          className="MobileClientFioContainer"
        >
          <span>
            Григорьев Григорий Григорьевич
          </span>
          <button
            onClick={[Function]}
          >
            Edit
          </button>
        </div>
      </div>
      <div
        className="MobileClientBalance"
      >
        <button
          className="MobileClientDecreaseBalance"
          onClick={[Function]}
        >
          -
        </button>
        <span>
          5
        </span>
        <button
          className="MobileClientIncreaseBalance"
          onClick={[Function]}
        >
          +
        </button>
      </div>
      <div
        className="MobileClientStatus"
      >
        <span
          className="MobileClientStatusActive"
        >
          Active
        </span>
      </div>
      <div
        className="MobileClientActions"
      >
        <button
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
    </div>
  </div>
  <button
    className="MobileNewClientButton"
    onClick={[Function]}
  >
    Add new client
  </button>
</div>
`;

exports[`>>>MobileCompany renders empty array correctly 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyChangeTitle"
  >
    <div>
      <input
        onClick={[Function]}
        type="button"
        value="МТС"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Velcom"
      />
    </div>
    <div
      className="NameMobileCompanyFilter"
    >
      <label
        htmlFor="filter"
      >
        Show
      </label>
      <select
        id="filter"
        onChange={[Function]}
      >
        <option
          value="all"
        >
          All
        </option>
        <option
          value="active"
        >
          Active
        </option>
        <option
          value="blocked"
        >
          Blocked
        </option>
      </select>
    </div>
  </div>
  <div
    className="MobileCompanyName"
  >
    Компания «
    MTC
    »
  </div>
  <div
    className="MobileCompanyClients"
  />
  <button
    className="MobileNewClientButton"
    onClick={[Function]}
  >
    Add new client
  </button>
</div>
`;
